Adicionado o arquivo README.md já com descrições do projeto e início da documentação, também foi inserido a logo da empresa

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     </div>
 
-    <div id="container">
+    <div id="container" class="analyse">
         <div id="gauges">
 
 
@@ -79,6 +79,7 @@
         </div>
     </div>
     <div id="toast"></div>
+    <div id="logo-multscan"></div>
     <script src="conexao-websocket.js"></script>
     <script src="gauges.js"></script>
     <script src="charts.js"></script>
